# denodo

./: README.md  denodo.cabal
lib/: Denodo.hs
