Name: denodo
Version: 0.1.0.0
Cabal-Version: >=1.10
Build-Type: Simple
License: MIT
License-File: LICENSE
Copyright: 2015 Daniel Diaz
Author: Daniel Diaz
Maintainer: diaz_carrete@yahoo.com
Bug-Reports: https://github.com/danidiaz/denodo/issues
Synopsis: Utilities to manage Denodo servers.
Category: Network

extra-source-files:
    README.md
    CHANGELOG

source-repository head
    type: git
    location: git@github.com:danidiaz/denodo.git

executable denodo
    hs-source-dirs: app/denodo
    main-is: Main.hs
    default-language: Haskell2010
    ghc-options: -Wall -threaded -O2
    build-depends:         
          base >= 4.7 && < 5
        , denodo

library
    hs-source-dirs: lib
    default-language: Haskell2010
    build-depends:
          base                  >= 4        && < 5   
        , transformers          >= 0.4.3.0
        , wreq                  >= 0.4.1.0 
        , aeson                 >= 0.11.0.0
        , bytestring            >= 0.10.6.0
        , text                  >= 1.2.2.0
        , optparse-applicative  >= 0.12.1.0
        , lens                  >= 4.5
        , lens-aeson            >= 1.0.0.0 
        , monoid-subclasses     >= 0.4.2
        , containers            >= 0.5
        , async                 >= 2.1.0
        , attoparsec            >= 0.13
        , profunctors           >= 5.2 
        , stm                   >= 2.4.4
        , foldl                 >= 1.1.5
        , streaming             >= 0.1.4
        , conceit               >= 0.4.0.0
        , process-streaming     >= 0.9.1.2
    exposed-modules:
        Denodo
    ghc-options: -O2 -Wall
